# TerraScout

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
agent/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
agent/configs/: default.yaml
agent/src/: __init__.py
agent/src/bridge/: __init__.py  client.py  environment.py  observations.py  rewards.py
agent/src/core/: __init__.py
agent/src/environment/: __init__.py
agent/src/models/: __init__.py
agent/src/utils/: __init__.py  logger.py
agent/tests/: conftest.py
bot/: .gitignore  README.md
bot/src/: bot.js  index.js  server.js
docs/: GLOSSARY.md  PROJECT_SCOPE.md  README.md  SYSTEM_BOUNDARIES.md  TECH_STACK.md  USE_CASES.md
docs/architecture/: COMPONENT_DIAGRAM.md  DATA_FLOW.md  SYSTEM_OVERVIEW.md
docs/decisions/: ADR_001_MINERL_SELECTION.md  ADR_002_MINEFLAYER_MIGRATION.md  ADR_TEMPLATE.md
docs/guides/: SETUP_GUIDE.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md
docs/research/: REFERENCES.md  REWARD_DESIGN.md  RL_ALGORITHMS.md
scripts/: check_torch.py  start_all.ps1  stop_all.ps1  test_bridge.py  test_connection.ps1  test_gym_env.py  test_training.py  verify_installation.py
server/: .console_history  README.md  server.properties  spigot.yml  start.ps1
server/config/: paper-global.yml  paper-world-defaults.yml
server/terra_scout_world/: level.dat_old  paper-world.yml
server/terra_scout_world_nether/: level.dat_old  paper-world.yml
shared/: README.md  __init__.py
shared/constants/: minecraft.py  (+1 more)
training/: .gitignore  README.md  requirements.txt
(+42 files in other folders)
